# Maze-Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  algorithm.cpp  algorithm.h  astarsearch.cpp  breadthfirstsearch.cpp  custommaze.cpp  main.cpp  mainwindow.cpp  maze.cpp
MazeSolver/: CMakeLists.txt  Cell.cpp  Cell.h  State.cpp  Wall.cpp  Wall.h  algorithm.cpp  algorithm.h  astarsearch.cpp  astarsearch.h  breadthfirstsearch.cpp  breadthfirstsearch.h  customisablemaze.cpp  customisablemaze.h  custommaze.cpp  custommaze.h  customrectitem.cpp  customrectitem.h  depthfirstsearch.cpp  depthfirstsearch.h  generatingalgorithm.cpp  generatingalgorithm.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maze.cpp  maze.h  mazefilehandler.cpp  mazefilehandler.h  pathfindingalgorithm.cpp  pathfindingalgorithm.h  primsalgorithm.cpp  primsalgorithm.h  randomizedmaze.cpp  randomizedmaze.h  randomizedprimsalgorithm.cpp  randomizedprimsalgorithm.h  resources.qrc  resources_windows.qrc  (+3 more)
algorithms/generating/: randomizedprimsalgorithm.cpp  randomizedprimsalgorithm.h
algorithms/solving/: breadthfirstsearch.h  pathfindingalgorithm.cpp  pathfindingalgorithm.h
build-MazeSolver-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/MazeSolver_autogen/include/: ui_mainwindow.h
maze/: Cell.cpp  mazefilehandler.cpp  randomizedmaze.h  state.h  step.h
ui/: customrectitem.h  mainwindow.h
